# OpenGL

./: .gitmodules  CMakeLists.txt  main.cpp  renderer.cpp  renderer.h  vertexbuffer.h
Shaders/: Basic.shader  proj.shader  texture2d.shader
include/: bufferLayout.h  indexbuffer.h  renderer.h  shader.h  texture2d.h  vertexArray.h
src/: bufferLayout.cpp  indexbuffer.cpp  renderer.cpp  shader.cpp  texture2d.cpp  vertexArray.cpp  vertexbuffer.cpp
